cmake_minimum_required(VERSION 3.0)
project(stitching)
find_package(OpenCV REQUIRED)
add_executable(stitching stitching_detailed.cpp)
add_executable(calibration calibration.cpp)
add_executable(imageList_create imagelist_creator.cpp)
add_executable(undistort undistort.cpp)
add_executable(temp temp.cpp)
target_link_libraries(stitching ${OpenCV_LIBS})
target_link_libraries(calibration ${OpenCV_LIBS})
target_link_libraries(imageList_create ${OpenCV_LIBS})
target_link_libraries(undistort ${OpenCV_LIBS})
target_link_libraries(temp ${OpenCV_LIBS})